COPTS = [
    "-Iincludes",
    "-std=c++17",
]

LINKOPS = [
    "-pthread",
]

cc_library(
    name = "cpp_redis",
    srcs = glob([
        "sources/**/*.cpp",
    ]),
    hdrs = glob([
        "includes/cpp_redis/cpp_redis",
        "includes/**/*.hpp",
        "includes/**/*.ipp",
    ]),
    copts = COPTS,
    linkopts = LINKOPS,
    strip_include_prefix = "includes",
    visibility = ["//visibility:public"],
    deps = ["@tacopie"],
)

# Note: These tests should be broken up more - each file should have its own
# call to RUN_ALL_TESTS.
# For example, the number of individual cases in all files in srcs is 62. If
# the shard count is set to 62, bazel tells us "Having more than 50 shards is
# indicative of poor test organization. Please reduce the number of shards."
# Note 2: Some tests require exclusive access to a redis server running at the
# default port.  Therefor we can only run 1 test at a time.
cc_test(
    name = "test",
    size = "small",
    srcs = glob([
        "tests/sources/**/*.cpp",
    ]),
    copts = COPTS,
    linkopts = LINKOPS,
    shard_count = 1,  # See note above.
    deps = [
        ":cpp_redis",
        "@gtest",
    ],
)
